--- a/Alec/index.html
+++ b/Alec/index.html
@@ -8,6 +8,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="ng/angular-pageslide-directive.js"></script>
     <script>
+        if (window.location.href == "http://tietjens.com")
+            window.location.replace("http://alec.tietjens.com");
         var app = angular.module("app", ["pageslide-directive"]);
         app.controller('pageslideCtrl', ['$scope', function ($scope) {
             $scope.options = { 'about': false, 'portfolio': false };
