--- a/Alec/index.html
+++ b/Alec/index.html
@@ -8,6 +8,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.15/angular.min.js"></script>
     <script src="ng/angular-pageslide-directive.js"></script>
     <script>
+        if(window.location.href != "http")
         var app = angular.module("app", ["pageslide-directive"]);
         app.controller('pageslideCtrl', ['$scope', function ($scope) {
             $scope.options = { 'about': false, 'portfolio': false };
@@ -62,7 +63,7 @@
                     <div style="padding:20px">
                         <h2>Portfolio</h2>
                         <span id="alert">
-                            This site is relatively new and my portfolio sections is currently missing my artwork and music, so please understand that a more thorough portfolio
+                            This site is relatively new and my portfolio section is currently missing my artwork and music, so please understand that a more thorough portfolio
                             is on the way!
                         </span>
                         <h3>Badge Distribution Tracker</h3>
